--- a/Assignment 4/Assignment-4.css
+++ b/Assignment 4/Assignment-4.css
@@ -194,6 +194,7 @@
         border: 1px solid #bbb;
         color: #bbb;
         border-radius: 50px;
+        cursor: pointer;
     }
 
     .bargraph{
@@ -224,4 +225,33 @@
     }
     .prf:hover h5, .rpt:hover h5{
         cursor: pointer;
+    }
+
+    .whitepage{
+        background-color: white;
+        width: 100%;
+        height: 1500px;
+        position: relative;
+        top: 1300px;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .whitepage h1 {
+        color: black;
+        position: relative;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 40px;
+        font-weight: lighter;
+        
+    }
+    .whitepage p {
+        color: grey;
+        position: relative;
+        top: 50px;
+    }
+    .whitepage h4{
+        color: purple;
+        margin: 50px;
+        font-weight: lighter;
     }
