--- a/Assignment 4/Assignment-4.css
+++ b/Assignment 4/Assignment-4.css
@@ -12,7 +12,6 @@
       position: relative;
     }
 
-    /* Navbar */
     .navbar {
       display: flex;
       justify-content: space-between;
@@ -230,7 +229,6 @@
     .whitepage{
         background-color: white;
         width: 100%;
-        height: 1500px;
         position: relative;
         top: 1300px;
         text-align: center;
@@ -238,7 +236,7 @@
     }
 
     .whitepage h1 {
-        color: black;
+        color: grey;
         position: relative;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 40px;
@@ -255,91 +253,113 @@
         margin: 50px;
         font-weight: lighter;
     }
-    /* Whale Section */
-.whale-section {
-    background: #fff;
-    color: #333;
-    text-align: center;
-    padding: 80px 100px;
-}
+    .whitepage h2{
+        color: gray;
+        position: relative;
+        top: -30px;
+        right: 550px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 10px;
+        font-weight: lighter;
+    }
+    .articlebox{
+        width: 30%; 
+        height: 500px;
+    }
+    .logo-heading{
+        display: flex;
+        flex-direction: row;
+    }
+    .artlogo p{
+        height: 60px;
+        padding-top: 10px;
+        width: 50px;
+        border: 2px solid rgb(182, 180, 180);
+        border-bottom: 3px solid purple;
+    }
+    .Heading p{
+        position: relative;
+        color: purple;
+        text-align: left;
+        font-size: 25px;
+        font-weight: lighter;
+        top: 45px;
+        left: 30px;
+    }
 
-.press-title {
-    font-size: 14px;
-    letter-spacing: 2px;
-    color: #888;
-    margin-bottom: 20px;
-}
+    .articles{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 
-.whale-heading {
-    font-size: 40px;
-    font-weight: 300;
-    margin-bottom: 50px;
-}
+    .content p{
+        text-align: left;
+        padding: 20px;
+        color: gray;
+        font-size: 20px;
+        font-weight: lighter;
+        line-height: 25px;
+        padding-left: 80px;
+        padding-right: 10px;
 
-.whale-cards {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    flex-wrap: wrap;
-}
+    }
 
-.whale-card {
-    background: #fafafa;
-    padding: 30px;
-    width: 300px;
-    border-radius: 12px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    text-align: left;
-    position: relative;
-}
+    .readmore button{
+        background: none;
+        border: 1px solid lightgray;
+        color: purple;
+        padding: 10px;
+        border-radius: 10px;
+        position: relative;
+        left: -100px;
+        top: 50px;
+        cursor: pointer;   
+    }
 
-.date-box {
-    background: #fff;
-    border: 1px solid #ddd;
-    display: inline-block;
-    text-align: center;
-    padding: 8px 15px;
-    border-radius: 6px;
-    margin-bottom: 15px;
-}
+    .graypage{
+        background-color: rgb(205, 202, 202);
+        width: 100%;
+        position: relative;
+        top: 1300px;
+        text-align: center;
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .rownav{
+        border: 1px solid black;
+        width: 15%;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
 
-.date-box .day {
-    font-size: 20px;
-    font-weight: bold;
-    color: #333;
-}
+    .rownav h3{
+        width: 20px;
+        color: black;
+        font-weight: bold;
+        font-size: 15px;
+        margin-left: 10px;
+        margin-top: 20px;
+        margin-bottom: 30px;
+        border-bottom: 2px solid purple;
+        
 
-.date-box .month {
-    font-size: 12px;
-    text-transform: uppercase;
-    color: #b44ac0;
-    margin-top: -4px;
-}
-
-.whale-card h3 {
-    font-size: 16px;
-    color: #b44ac0;
-    margin-bottom: 15px;
-}
-
-.whale-card p {
-    font-size: 14px;
-    color: #666;
-    margin-bottom: 20px;
-}
-
-.read-btn {
-    background: none;
-    border: 1px solid #b44ac0;
-    color: #b44ac0;
-    padding: 8px 16px;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: all 0.3s ease;
-}
-
-.read-btn:hover {
-    background: #b44ac0;
-    color: #fff;
-}
+    }
+    .rownav p{
+        color: gray;
+        margin: 10px;
+    }
+    .footer{
+        background-color: rgb(205, 202, 202);
+        width: 100%;
+        position: relative;
+        top: 1300px;
+        text-align: center;
+        padding: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
