--- a/Game/duckhunt.css
+++ b/Game/duckhunt.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -12,17 +12,16 @@ body {
     justify-content: center;
     font-family: 'Press Start 2P', cursive;
 }
-h1{
-    
+
+h1 {
     font-size: 40px;
-    color: #00ccff; /* similar light blue */
+    color: #00ccff;
     text-align: center;
     margin-bottom: 20px;
     text-shadow: 3px 3px 0px black;
-    background-color: bakc;
 }
 
-#title-box{
+#title-box {
     background-color: #000000;
     width: 20%;
     align-self: center;
@@ -39,7 +38,8 @@ h1{
     background-size: cover;
     overflow: hidden;
 }
-#Reload{
+
+#Reload {
     width: 70px;
     position: fixed;
     top: 550px;
@@ -52,7 +52,8 @@ h1{
     border-radius: 5px;
     opacity: 0;
 }
-#shot{
+
+#shot {
     width: 100px;
     position: fixed;
     top: 600px;
@@ -83,10 +84,11 @@ h1{
 }
 #score.show-final {
     left: 50%;
-    top: 52%; 
+    top: 52%;
     transform: translateX(-50%);
 }
-#gameover{
+
+#gameover {
     width: 200px;
     position: fixed;
     left: 630px;
@@ -97,13 +99,14 @@ h1{
     border: 2px solid green;
     background-color: #000000;
     border-radius: 5px;
-    opacity: 0;   
+    opacity: 0;
 }
 #gameover.show {
-    top: 40%;   
+    top: 40%;
     opacity: 1;
 }
-#startBtn{
+
+#startBtn {
     position: fixed;
     background: none;
     top: 300px;
@@ -113,29 +116,31 @@ h1{
     border: 1px solid black;
     padding: 15px;
     border-radius: 10px;
-    width:170px ;
-
+    width: 170px;
 }
-#startBtn:hover{
-    box-shadow:3px 3px 3px #000000;
+#startBtn:hover {
+    box-shadow: 3px 3px 3px #000000;
 }
 #startBtn:active {
     opacity: 0;
-    transform: scale(0.95); 
+    transform: scale(0.95);
     transition: opacity 0.2s ease, transform 0.1s ease;
 }
+
 .crosshair-cursor {
     cursor: crosshair;
 }
 
-#duck{
+
+.duck {
     position: absolute;
     width: 60px;
     height: 60px;
-    background: url('duck1.png') no-repeat center/cover; 
+    background: url('duck1.png') no-repeat center/cover;
     display: none;
     animation: flap 0.3s steps(1) infinite;
 }
+
 @keyframes flap {
     0%   { background-image: url("duck1.png"); }
     33%  { background-image: url("duck2.png"); }
@@ -144,5 +149,26 @@ h1{
 }
 
 
+.duckshot {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    display: none;
+    background: url("hit1.png") no-repeat center/cover;
+}
 
 
+.duckshot-animate {
+    animation:shot 0.5s steps(1) infinite, fall 2s linear forwards;
+}
+@keyframes shot {
+    0%   { background-image: url("hit2.png"); }
+    50%  { background-image: url("hit3.png"); }
+    100% { background-image: url("hit2.png"); }
+}
+
+
+@keyframes fall {
+    from { transform: translateY(0); }
+    to   { transform: translateY(500px); opacity: 0; }
+}
