--- a/Game/duckhunt.css
+++ b/Game/duckhunt.css
@@ -127,6 +127,28 @@ h1 {
     transition: opacity 0.2s ease, transform 0.1s ease;
 }
 
+#restartbtn {
+    display: none;
+    position: fixed;
+    background: none;
+    top: 300px;
+    right: 350px;
+    font-family: 'Press Start 2P', cursive;
+    cursor: pointer;
+    border: 1px solid black;
+    padding: 15px;
+    border-radius: 10px;
+    width: 170px;
+}
+#restartbtn:hover {
+    box-shadow: 3px 3px 3px #000000;
+}
+#restartbtn:active {
+    opacity: 0;
+    transform: scale(0.95);
+    transition: opacity 0.2s ease, transform 0.1s ease;
+}
+
 .crosshair-cursor {
     cursor: crosshair;
 }
