--- a/Bootstrap/style.css
+++ b/Bootstrap/style.css
@@ -1,7 +1,24 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .card {
   border-radius: 20px;
 }
 
 .card img.rounded-circle {
   border: 3px solid #0d6efd; /* Bootstrap’s primary color */
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+footer {
+  margin-top: auto;
+}
+.offcanvas-start {
+  width: 250px; /* default ~ 300px */
 }
